--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -114,4 +114,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="StartDownloadButtonText" xml:space="preserve">
+    <value>Download!</value>
+  </data>
+  <data name="StopDownloadButtonText" xml:space="preserve">
+    <value>Stop!</value>
+  </data>
 </root>
