Added parsing of the downloaded items info from JSON and proper work with the playlists.

--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -200,4 +200,8 @@ You may find it here: {0}
   <data name="SearchPatternDownloadProgress" xml:space="preserve">
     <value>(\[download\]\s*)(\S*)% of</value>
   </data>
+  <data name="LogMessageDownloadingFile" xml:space="preserve">
+    <value>Downloading the file: {0}
+Link: {1}</value>
+  </data>
 </root>
