Added expander for the log text box. Made the window unresizeable. Various minor UI fixes.

--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -126,6 +126,12 @@
   <data name="ClearButtonText" xml:space="preserve">
     <value>Clear</value>
   </data>
+  <data name="ShowDownloadedItemsButtonText" xml:space="preserve">
+    <value>Show Downloaded Items</value>
+  </data>
+  <data name="ShowLogExpanderText" xml:space="preserve">
+    <value>Show Log</value>
+  </data>
   <data name="DownloaderFileName" xml:space="preserve">
     <value>youtube-dl.exe</value>
   </data>
