--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
-  <!-- 
+    <!-- 
     Microsoft ResX Schema 
     
     Version 2.0
@@ -59,170 +59,180 @@
             : using a System.ComponentModel.TypeConverter
             : and then encoded with base64 encoding.
     -->
-  <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
-    <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
-    <xsd:element name="root" msdata:IsDataSet="true">
-      <xsd:complexType>
-        <xsd:choice maxOccurs="unbounded">
-          <xsd:element name="metadata">
+    <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
+        <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
+        <xsd:element name="root" msdata:IsDataSet="true">
             <xsd:complexType>
-              <xsd:sequence>
-                <xsd:element name="value" type="xsd:string" minOccurs="0" />
-              </xsd:sequence>
-              <xsd:attribute name="name" use="required" type="xsd:string" />
-              <xsd:attribute name="type" type="xsd:string" />
-              <xsd:attribute name="mimetype" type="xsd:string" />
-              <xsd:attribute ref="xml:space" />
+                <xsd:choice maxOccurs="unbounded">
+                    <xsd:element name="metadata">
+                        <xsd:complexType>
+                            <xsd:sequence>
+                                <xsd:element name="value" type="xsd:string" minOccurs="0" />
+                            </xsd:sequence>
+                            <xsd:attribute name="name" use="required" type="xsd:string" />
+                            <xsd:attribute name="type" type="xsd:string" />
+                            <xsd:attribute name="mimetype" type="xsd:string" />
+                            <xsd:attribute ref="xml:space" />
+                        </xsd:complexType>
+                    </xsd:element>
+                    <xsd:element name="assembly">
+                        <xsd:complexType>
+                            <xsd:attribute name="alias" type="xsd:string" />
+                            <xsd:attribute name="name" type="xsd:string" />
+                        </xsd:complexType>
+                    </xsd:element>
+                    <xsd:element name="data">
+                        <xsd:complexType>
+                            <xsd:sequence>
+                                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
+                                <xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
+                            </xsd:sequence>
+                            <xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1" />
+                            <xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
+                            <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
+                            <xsd:attribute ref="xml:space" />
+                        </xsd:complexType>
+                    </xsd:element>
+                    <xsd:element name="resheader">
+                        <xsd:complexType>
+                            <xsd:sequence>
+                                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
+                            </xsd:sequence>
+                            <xsd:attribute name="name" type="xsd:string" use="required" />
+                        </xsd:complexType>
+                    </xsd:element>
+                </xsd:choice>
             </xsd:complexType>
-          </xsd:element>
-          <xsd:element name="assembly">
-            <xsd:complexType>
-              <xsd:attribute name="alias" type="xsd:string" />
-              <xsd:attribute name="name" type="xsd:string" />
-            </xsd:complexType>
-          </xsd:element>
-          <xsd:element name="data">
-            <xsd:complexType>
-              <xsd:sequence>
-                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
-                <xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
-              </xsd:sequence>
-              <xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1" />
-              <xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
-              <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
-              <xsd:attribute ref="xml:space" />
-            </xsd:complexType>
-          </xsd:element>
-          <xsd:element name="resheader">
-            <xsd:complexType>
-              <xsd:sequence>
-                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
-              </xsd:sequence>
-              <xsd:attribute name="name" type="xsd:string" use="required" />
-            </xsd:complexType>
-          </xsd:element>
-        </xsd:choice>
-      </xsd:complexType>
-    </xsd:element>
-  </xsd:schema>
-  <resheader name="resmimetype">
-    <value>text/microsoft-resx</value>
-  </resheader>
-  <resheader name="version">
-    <value>2.0</value>
-  </resheader>
-  <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </resheader>
-  <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </resheader>
-  <data name="StartDownloadButtonText" xml:space="preserve">
+        </xsd:element>
+    </xsd:schema>
+    <resheader name="resmimetype">
+        <value>text/microsoft-resx</value>
+    </resheader>
+    <resheader name="version">
+        <value>2.0</value>
+    </resheader>
+    <resheader name="reader">
+        <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    </resheader>
+    <resheader name="writer">
+        <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    </resheader>
+    <data name="StartDownloadButtonText" xml:space="preserve">
     <value>Download!</value>
   </data>
-  <data name="StopDownloadButtonText" xml:space="preserve">
+    <data name="StopDownloadButtonText" xml:space="preserve">
     <value>Stop!</value>
   </data>
-  <data name="BrowseButtonText" xml:space="preserve">
+    <data name="BrowseButtonText" xml:space="preserve">
     <value>Browse...</value>
   </data>
-  <data name="ClearButtonText" xml:space="preserve">
+    <data name="ClearButtonText" xml:space="preserve">
     <value>Clear</value>
   </data>
-  <data name="ShowDownloadedItemsButtonText" xml:space="preserve">
-    <value>Show Downloaded Items</value>
+    <data name="ShowDownloadedItemsButtonText" xml:space="preserve">
+    <value>Show downloaded items</value>
   </data>
-  <data name="ShowLogExpanderText" xml:space="preserve">
+    <data name="ShowLogExpanderText" xml:space="preserve">
     <value>Show Log</value>
   </data>
-  <data name="DownloaderFileName" xml:space="preserve">
+    <data name="DownloaderFileName" xml:space="preserve">
     <value>youtube-dl.exe</value>
   </data>
-  <data name="ConverterDirectoryName" xml:space="preserve">
+    <data name="ConverterDirectoryName" xml:space="preserve">
     <value>ffmpeg</value>
   </data>
-  <data name="BinDirectoryName" xml:space="preserve">
+    <data name="BinDirectoryName" xml:space="preserve">
     <value>bin</value>
   </data>
-  <data name="DownloaderFormatBestName" xml:space="preserve">
+    <data name="DownloaderFormatBestName" xml:space="preserve">
     <value>Best quality video</value>
   </data>
-  <data name="DownloaderFormatBestDirectLinkName" xml:space="preserve">
+    <data name="DownloaderFormatBestDirectLinkName" xml:space="preserve">
     <value>Best quality video available by direct link</value>
   </data>
-  <data name="DownloaderFormatAudioOnlyName" xml:space="preserve">
+    <data name="DownloaderFormatAudioOnlyName" xml:space="preserve">
     <value>Audio only</value>
   </data>
-  <data name="DownloaderFormatBestOption" xml:space="preserve">
+    <data name="DownloaderOptionFormatBest" xml:space="preserve">
     <value>bestvideo[ext=mp4]+bestaudio[ext=m4a]/best[ext=mp4]/best</value>
   </data>
-  <data name="DownloaderFormatBestDirectLinkOption" xml:space="preserve">
+    <data name="DownloaderOptionFormatBestDirectLink" xml:space="preserve">
     <value>(bestvideo+bestaudio/best)[protocol^=http]</value>
   </data>
-  <data name="DownloaderFormatAudioOnlyOption" xml:space="preserve">
+    <data name="DownloaderOptionFormatAudioOnly" xml:space="preserve">
     <value>mp3/ogg/m4a/aac</value>
   </data>
-  <data name="DownloaderEncodingUtf8Option" xml:space="preserve">
+    <data name="DownloaderOptionEncodingUtf8" xml:space="preserve">
     <value>--encoding utf-8</value>
   </data>
-  <data name="DownloaderGetFilenameOption" xml:space="preserve">
+    <data name="DownloaderOptionGetFilename" xml:space="preserve">
     <value>--get-filename</value>
   </data>
-  <data name="DownloaderItemTitleTemplate" xml:space="preserve">
+    <data name="DownloaderItemTitleTemplate" xml:space="preserve">
     <value>%(title)s.%(ext)s</value>
   </data>
-  <data name="DownloaderConverterLocationOption" xml:space="preserve">
+    <data name="DownloaderOptionConverterLocation" xml:space="preserve">
     <value>--ffmpeg-location</value>
   </data>
-  <data name="ExplorerFileName" xml:space="preserve">
+    <data name="DownloaderOptionNoOriginalDateTime" xml:space="preserve">
+    <value>--no-mtime</value>
+  </data>
+    <data name="DownloaderOptionNoPlaylist" xml:space="preserve">
+    <value>--no-playlist</value>
+  </data>
+    <data name="ExplorerFileName" xml:space="preserve">
     <value>explorer.exe</value>
   </data>
-  <data name="ExplorerSelectOption" xml:space="preserve">
+    <data name="ExplorerOptionSelect" xml:space="preserve">
     <value>/select</value>
   </data>
-  <data name="DownloadFormatCaption" xml:space="preserve">
+    <data name="DownloadFormatCaption" xml:space="preserve">
     <value>Choose what you want to download:</value>
   </data>
-  <data name="DownloadFolderCaption" xml:space="preserve">
-    <value>Select download folder:</value>
+    <data name="DownloadFolderCaption" xml:space="preserve">
+    <value>Select the download folder:</value>
   </data>
-  <data name="DownloadLinkCaption" xml:space="preserve">
-    <value>Put YouTube link here:</value>
+    <data name="DownloadLinkCaption" xml:space="preserve">
+    <value>Put link to a video here:</value>
   </data>
-  <data name="LogMessageDownloadStart" xml:space="preserve">
-    <value>Starting to download your video...</value>
+    <data name="LogMessageDownloadStart" xml:space="preserve">
+    <value>Starting to download your files...</value>
   </data>
-  <data name="LogMessageDownloadSuccess" xml:space="preserve">
-    <value>Congratulations! Your video was successfully downloaded!
-You may find it here: {0}
-</value>
+    <data name="LogMessageDownloadSuccess" xml:space="preserve">
+    <value>Congratulations! Your download successfully completed!</value>
+</data>
+    <data name="LogMessageLocationOfFile" xml:space="preserve">
+      <value>You may find your file here: {0}</value>
   </data>
-  <data name="LogMessageDownloadFail" xml:space="preserve">
-    <value>Failed to download your video.</value>
+    <data name="LogMessageLocationOfFiles" xml:space="preserve">
+      <value>You may find your files here: {0}</value>
   </data>
-  <data name="LogMessageDownloadCancel" xml:space="preserve">
-    <value>You have cancelled the download of your video.</value>
+    <data name="LogMessageDownloadFail" xml:space="preserve">
+    <value>Download failed.</value>
   </data>
-  <data name="LogMessageFileNameRetrieved" xml:space="preserve">
+    <data name="LogMessageDownloadCancel" xml:space="preserve">
+    <value>You have cancelled the download.</value>
+  </data>
+    <data name="LogMessageFileNameRetrieved" xml:space="preserve">
     <value>File name successfully retrieved: {0}</value>
   </data>
-  <data name="SearchPatternDownloadProgress" xml:space="preserve">
+    <data name="SearchPatternDownloadProgress" xml:space="preserve">
     <value>(\[download\]\s*)(\S*)(\s*)% of</value>
   </data>
-  <data name="LogMessageDownloadingFile" xml:space="preserve">
+    <data name="LogMessageDownloadingFile" xml:space="preserve">
     <value>Downloading the file: {0}
 Link: {1}</value>
   </data>
-  <data name="MessageDownloading" xml:space="preserve">
+    <data name="MessageDownloading" xml:space="preserve">
     <value>Downloading: {0}</value>
   </data>
-  <data name="MessageDownloadComplete" xml:space="preserve">
+    <data name="MessageDownloadComplete" xml:space="preserve">
     <value>Download complete!</value>
   </data>
-  <data name="MessageDownloadPreparing" xml:space="preserve">
-    <value>Preparing to download your files...</value>
+    <data name="MessageDownloadPreparing" xml:space="preserve">
+    <value>Preparing to download...</value>
   </data>
-  <data name="AppName" xml:space="preserve">
+    <data name="AppName" xml:space="preserve">
     <value>Youtube Downloader</value>
   </data>
 </root>
