Added handlers for the context menu items, captions & minor improvements.

--- a/MediaDownloader/Properties/Resources.resx
+++ b/MediaDownloader/Properties/Resources.resx
@@ -250,4 +250,31 @@ Url: {1}</value>
     <data name="AppName" xml:space="preserve">
     <value>Media Downloader</value>
   </data>
+    <data name="HistoryMenuItemOpenFolder" xml:space="preserve">
+    <value>Open Download Folder</value>
+  </data>
+    <data name="HistoryMenuItemRedownload" xml:space="preserve">
+    <value>Redownload</value>
+  </data>
+    <data name="HistoryMenuItemCopyLink" xml:space="preserve">
+    <value>Copy Download Link</value>
+  </data>
+    <data name="HistoryMenuItemRemoveFromHistory" xml:space="preserve">
+    <value>Remove From History</value>
+  </data>
+    <data name="HistoryMenuItemClearHistory" xml:space="preserve">
+    <value>Clear History</value>
+  </data>
+    <data name="DownloadStatusSuccess" xml:space="preserve">
+    <value>Success</value>
+  </data>
+    <data name="DownloadStatusFail" xml:space="preserve">
+    <value>Fail</value>
+  </data>
+    <data name="DownloadStatusCancel" xml:space="preserve">
+    <value>Cancel</value>
+  </data>
+    <data name="DownloadStatusUnknown" xml:space="preserve">
+    <value>Unknown</value>
+  </data>
 </root>
