--- a/MediaDownloader/Properties/Resources.ru-RU.resx
+++ b/MediaDownloader/Properties/Resources.ru-RU.resx
@@ -1,226 +1,210 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
-  <!-- 
-    Microsoft ResX Schema 
-    
-    Version 2.0
-    
-    The primary goals of this format is to allow a simple XML format 
-    that is mostly human readable. The generation and parsing of the 
-    various data types are done through the TypeConverter classes 
-    associated with the data types.
-    
-    Example:
-    
-    ... ado.net/XML headers & schema ...
-    <resheader name="resmimetype">text/microsoft-resx</resheader>
-    <resheader name="version">2.0</resheader>
-    <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
-    <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
-    <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
-    <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
-    <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
-        <value>[base64 mime encoded serialized .NET Framework object]</value>
-    </data>
-    <data name="Icon1" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-        <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
-        <comment>This is a comment</comment>
-    </data>
-                
-    There are any number of "resheader" rows that contain simple 
-    name/value pairs.
-    
-    Each data row contains a name, and value. The row also contains a 
-    type or mimetype. Type corresponds to a .NET class that support 
-    text/value conversion through the TypeConverter architecture. 
-    Classes that don't support this are serialized and stored with the 
-    mimetype set.
-    
-    The mimetype is used for serialized objects, and tells the 
-    ResXResourceReader how to depersist the object. This is currently not 
-    extensible. For a given mimetype the value must be set accordingly:
-    
-    Note - application/x-microsoft.net.object.binary.base64 is the format 
-    that the ResXResourceWriter will generate, however the reader can 
-    read any of the formats listed below.
-    
-    mimetype: application/x-microsoft.net.object.binary.base64
-    value   : The object must be serialized with 
-            : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
-            : and then encoded with base64 encoding.
-    
-    mimetype: application/x-microsoft.net.object.soap.base64
-    value   : The object must be serialized with 
-            : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
-            : and then encoded with base64 encoding.
+	<!-- 
+		Microsoft ResX Schema
 
-    mimetype: application/x-microsoft.net.object.bytearray.base64
-    value   : The object must be serialized into a byte array 
-            : using a System.ComponentModel.TypeConverter
-            : and then encoded with base64 encoding.
-    -->
-  <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
-    <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
-    <xsd:element name="root" msdata:IsDataSet="true">
-      <xsd:complexType>
-        <xsd:choice maxOccurs="unbounded">
-          <xsd:element name="metadata">
-            <xsd:complexType>
-              <xsd:sequence>
-                <xsd:element name="value" type="xsd:string" minOccurs="0" />
-              </xsd:sequence>
-              <xsd:attribute name="name" use="required" type="xsd:string" />
-              <xsd:attribute name="type" type="xsd:string" />
-              <xsd:attribute name="mimetype" type="xsd:string" />
-              <xsd:attribute ref="xml:space" />
-            </xsd:complexType>
-          </xsd:element>
-          <xsd:element name="assembly">
-            <xsd:complexType>
-              <xsd:attribute name="alias" type="xsd:string" />
-              <xsd:attribute name="name" type="xsd:string" />
-            </xsd:complexType>
-          </xsd:element>
-          <xsd:element name="data">
-            <xsd:complexType>
-              <xsd:sequence>
-                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
-                <xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
-              </xsd:sequence>
-              <xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1" />
-              <xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
-              <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
-              <xsd:attribute ref="xml:space" />
-            </xsd:complexType>
-          </xsd:element>
-          <xsd:element name="resheader">
-            <xsd:complexType>
-              <xsd:sequence>
-                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
-              </xsd:sequence>
-              <xsd:attribute name="name" type="xsd:string" use="required" />
-            </xsd:complexType>
-          </xsd:element>
-        </xsd:choice>
-      </xsd:complexType>
-    </xsd:element>
-  </xsd:schema>
-  <resheader name="resmimetype">
-    <value>text/microsoft-resx</value>
-  </resheader>
-  <resheader name="version">
-    <value>2.0</value>
-  </resheader>
-  <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </resheader>
-  <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </resheader>
-  <data name="StartDownloadButtonText" xml:space="preserve">
+		Version 1.3
+
+		The primary goals of this format is to allow a simple XML format 
+		that is mostly human readable. The generation and parsing of the 
+		various data types are done through the TypeConverter classes 
+		associated with the data types.
+
+		Example:
+
+		... ado.net/XML headers & schema ...
+		<resheader name="resmimetype">text/microsoft-resx</resheader>
+		<resheader name="version">1.3</resheader>
+		<resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
+		<resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
+		<data name="Name1">this is my long string</data>
+		<data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
+		<data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
+			[base64 mime encoded serialized .NET Framework object]
+		</data>
+		<data name="Icon1" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+			[base64 mime encoded string representing a byte array form of the .NET Framework object]
+		</data>
+
+		There are any number of "resheader" rows that contain simple 
+		name/value pairs.
+
+		Each data row contains a name, and value. The row also contains a 
+		type or mimetype. Type corresponds to a .NET class that support 
+		text/value conversion through the TypeConverter architecture. 
+		Classes that don't support this are serialized and stored with the 
+		mimetype set.
+
+		The mimetype is used for serialized objects, and tells the 
+		ResXResourceReader how to depersist the object. This is currently not 
+		extensible. For a given mimetype the value must be set accordingly:
+
+		Note - application/x-microsoft.net.object.binary.base64 is the format 
+		that the ResXResourceWriter will generate, however the reader can 
+		read any of the formats listed below.
+
+		mimetype: application/x-microsoft.net.object.binary.base64
+		value   : The object must be serialized with 
+			: System.Serialization.Formatters.Binary.BinaryFormatter
+			: and then encoded with base64 encoding.
+
+		mimetype: application/x-microsoft.net.object.soap.base64
+		value   : The object must be serialized with 
+			: System.Runtime.Serialization.Formatters.Soap.SoapFormatter
+			: and then encoded with base64 encoding.
+
+		mimetype: application/x-microsoft.net.object.bytearray.base64
+		value   : The object must be serialized into a byte array 
+			: using a System.ComponentModel.TypeConverter
+			: and then encoded with base64 encoding.
+	-->
+	
+	<xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
+		<xsd:element name="root" msdata:IsDataSet="true">
+			<xsd:complexType>
+				<xsd:choice maxOccurs="unbounded">
+					<xsd:element name="data">
+						<xsd:complexType>
+							<xsd:sequence>
+								<xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
+								<xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
+							</xsd:sequence>
+							<xsd:attribute name="name" type="xsd:string" msdata:Ordinal="1" />
+							<xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
+							<xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
+						</xsd:complexType>
+					</xsd:element>
+					<xsd:element name="resheader">
+						<xsd:complexType>
+							<xsd:sequence>
+								<xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
+							</xsd:sequence>
+							<xsd:attribute name="name" type="xsd:string" use="required" />
+						</xsd:complexType>
+					</xsd:element>
+				</xsd:choice>
+			</xsd:complexType>
+		</xsd:element>
+	</xsd:schema>
+	<resheader name="resmimetype">
+		<value>text/microsoft-resx</value>
+	</resheader>
+	<resheader name="version">
+		<value>1.3</value>
+	</resheader>
+	<resheader name="reader">
+		<value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.3500.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+	</resheader>
+	<resheader name="writer">
+		<value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.3500.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+	</resheader>
+	<data name="StartDownloadButtonText" xml:space="preserve">
     <value>Скачать!</value>
   </data>
-  <data name="StopDownloadButtonText" xml:space="preserve">
+	<data name="StopDownloadButtonText" xml:space="preserve">
     <value>Стоп!</value>
   </data>
-  <data name="BrowseButtonText" xml:space="preserve">
+	<data name="BrowseButtonText" xml:space="preserve">
     <value>Обзор...</value>
   </data>
-  <data name="ClearButtonText" xml:space="preserve">
+	<data name="ClearButtonText" xml:space="preserve">
     <value>Очистить</value>
   </data>
-  <data name="ShowDownloadedItemsButtonText" xml:space="preserve">
+	<data name="ShowDownloadedItemsButtonText" xml:space="preserve">
     <value>Показать скачанные файлы</value>
   </data>
-  <data name="ShowLogExpanderText" xml:space="preserve">
+	<data name="ShowLogExpanderText" xml:space="preserve">
     <value>Журнал</value>
   </data>
-  <data name="ShowHistoryExpanderText" xml:space="preserve">
+	<data name="ShowHistoryExpanderText" xml:space="preserve">
     <value>История</value>
   </data>
-  <data name="DownloaderFormatBestName" xml:space="preserve">
+	<data name="DownloaderFormatBestName" xml:space="preserve">
     <value>Видео максимального качества</value>
   </data>
-  <data name="DownloaderFormatBestDirectLinkName" xml:space="preserve">
+	<data name="DownloaderFormatBestMp4Name" xml:space="preserve">
+    <value>Видео MP4 максимального качества</value>
+  </data>
+	<data name="DownloaderFormatBestDirectLinkName" xml:space="preserve">
     <value>Лучшее, что доступно по прямой ссылке</value>
   </data>
-  <data name="DownloaderFormatAudioOnlyName" xml:space="preserve">
+	<data name="DownloaderFormatAudioOnlyName" xml:space="preserve">
     <value>Только аудио</value>
   </data>
-  <data name="DownloadFormatCaption" xml:space="preserve">
+	<data name="DownloadFormatCaption" xml:space="preserve">
     <value>Выберите, что будем качать:</value>
   </data>
-  <data name="DownloadFolderCaption" xml:space="preserve">
+	<data name="DownloadFolderCaption" xml:space="preserve">
     <value>Выберите папку для загрузок:</value>
   </data>
-  <data name="DownloadLinkCaption" xml:space="preserve">
+	<data name="DownloadLinkCaption" xml:space="preserve">
     <value>Сюда вставьте ссылку на видео:</value>
   </data>
-  <data name="LogMessageDownloadStart" xml:space="preserve">
+	<data name="LogMessageDownloadStart" xml:space="preserve">
     <value>Начинаем загрузку...</value>
   </data>
-  <data name="LogMessageDownloadSuccess" xml:space="preserve">
+	<data name="LogMessageDownloadSuccess" xml:space="preserve">
     <value>Поздравляем! Загрузка успешно завершена!</value>
   </data>
-  <data name="LogMessageLocationOfFile" xml:space="preserve">
+	<data name="LogMessageLocationOfFile" xml:space="preserve">
     <value>Найти ваш файл можно здесь: {0}</value>
   </data>
-  <data name="LogMessageLocationOfFiles" xml:space="preserve">
+	<data name="LogMessageLocationOfFiles" xml:space="preserve">
     <value>Найти ваши файлы можно здесь: {0}</value>
   </data>
-  <data name="LogMessageDownloadFail" xml:space="preserve">
+	<data name="LogMessageDownloadFail" xml:space="preserve">
     <value>Загрузка не удалась.</value>
   </data>
-  <data name="LogMessageDownloadCancel" xml:space="preserve">
+	<data name="LogMessageDownloadCancel" xml:space="preserve">
     <value>Вы отменили загрузку.</value>
   </data>
-  <data name="LogMessageFileNameRetrieved" xml:space="preserve">
+	<data name="LogMessageFileNameRetrieved" xml:space="preserve">
     <value>Имя файла успешно получено: {0}</value>
   </data>
-  <data name="LogMessageDownloadingFile" xml:space="preserve">
+	<data name="LogMessageDownloadingFile" xml:space="preserve">
     <value>Качаем файл: {0}
 Ссылка: {1}</value>
   </data>
-  <data name="MessageDownloading" xml:space="preserve">
+	<data name="MessageDownloading" xml:space="preserve">
     <value>Загрузка: {0}</value>
   </data>
-  <data name="MessageDownloadComplete" xml:space="preserve">
+	<data name="MessageDownloadComplete" xml:space="preserve">
     <value>Загрузка завершена! {0}</value>
   </data>
-  <data name="MessageDownloadFailed" xml:space="preserve">
+	<data name="MessageDownloadFailed" xml:space="preserve">
     <value>Загрузка не удалась! {0}</value>
   </data>
-  <data name="MessageDownloadCancelled" xml:space="preserve">
+	<data name="MessageDownloadCancelled" xml:space="preserve">
     <value>Вы отменили загрузку! {0}</value>
   </data>
-  <data name="MessageDownloadPreparing" xml:space="preserve">
+	<data name="MessageDownloadPreparing" xml:space="preserve">
     <value>Подготовка к загрузке...</value>
   </data>
-  <data name="HistoryMenuItemOpenFolder" xml:space="preserve">
+	<data name="HistoryMenuItemOpenFolder" xml:space="preserve">
     <value>Открыть папку с файлом</value>
   </data>
-  <data name="HistoryMenuItemRedownload" xml:space="preserve">
+	<data name="HistoryMenuItemRedownload" xml:space="preserve">
     <value>Скачать еще раз</value>
   </data>
-  <data name="HistoryMenuItemCopyLink" xml:space="preserve">
+	<data name="HistoryMenuItemCopyLink" xml:space="preserve">
     <value>Копировать ссылку</value>
   </data>
-  <data name="HistoryMenuItemRemoveFromHistory" xml:space="preserve">
+	<data name="HistoryMenuItemRemoveFromHistory" xml:space="preserve">
     <value>Удалить из истории</value>
   </data>
-  <data name="HistoryMenuItemClearHistory" xml:space="preserve">
+	<data name="HistoryMenuItemClearHistory" xml:space="preserve">
     <value>Очистить историю</value>
   </data>
-  <data name="DownloadStatusSuccess" xml:space="preserve">
+	<data name="DownloadStatusSuccess" xml:space="preserve">
     <value>Успех</value>
   </data>
-  <data name="DownloadStatusFail" xml:space="preserve">
+	<data name="DownloadStatusFail" xml:space="preserve">
     <value>Ошибка</value>
   </data>
-  <data name="DownloadStatusCancel" xml:space="preserve">
+	<data name="DownloadStatusCancel" xml:space="preserve">
     <value>Отмена</value>
   </data>
-  <data name="DownloadStatusUnknown" xml:space="preserve">
+	<data name="DownloadStatusUnknown" xml:space="preserve">
     <value>Неизвестно</value>
   </data>
 </root>
