feat: Update the solution to .NET 7
Made some refactoring

github: https://github.com/yuri-maxiutenko/MediaDownloader/issues/2

--- a/MediaDownloader/Properties/Resources.resx
+++ b/MediaDownloader/Properties/Resources.resx
@@ -245,7 +245,7 @@
 Url: {1}</value>
   </data>
   <data name="MessageDownloading" xml:space="preserve">
-    <value>Downloading: {0}</value>
+    <value>Downloading:</value>
   </data>
   <data name="MessageDownloadComplete" xml:space="preserve">
     <value>Download complete! {0}</value>
