feat: Add downloader auto-update
Added the Update method, made some refactoring

github: https://github.com/yuri-maxiutenko/MediaDownloader/issues/3

--- a/MediaDownloader/Properties/Resources.resx
+++ b/MediaDownloader/Properties/Resources.resx
@@ -195,6 +195,9 @@
   <data name="DownloaderOptionRetries" xml:space="preserve">
     <value>--retries</value>
   </data>
+  <data name="DownloaderOptionUpdate" xml:space="preserve">
+    <value>-U</value>
+  </data>
   <data name="ExplorerFileName" xml:space="preserve">
     <value>explorer.exe</value>
   </data>
