feat: Move database to user AppData
Added the ability to specify the connection string at runtime. Updated the code to support migrations.

github: https://github.com/yuri-maxiutenko/MediaDownloader/issues/9

--- a/MediaDownloader/Properties/Resources.resx
+++ b/MediaDownloader/Properties/Resources.resx
@@ -304,4 +304,10 @@ Url: {1}</value>
   <data name="AppFolderName" xml:space="preserve">
     <value>Media Downloader</value>
   </data>
+  <data name="DatabaseName" xml:space="preserve">
+    <value>Data.db</value>
+  </data>
+  <data name="DataFolderName" xml:space="preserve">
+    <value>Data</value>
+  </data>
 </root>
