refactor: renamed some variables & methods
github: https://github.com/yuri-maxiutenko/MediaDownloader/issues/14

--- a/MediaDownloader/Properties/Resources.resx
+++ b/MediaDownloader/Properties/Resources.resx
@@ -162,7 +162,7 @@
   <data name="DownloadFolderCaption" xml:space="preserve">
     <value>Select the download folder:</value>
   </data>
-  <data name="DownloadLinkCaption" xml:space="preserve">
+  <data name="MediaUrlCaption" xml:space="preserve">
     <value>Put link to a video here:</value>
   </data>
   <data name="LogMessageDownloadStart" xml:space="preserve">
